[tool.poetry]
name = "tinkerbell-docs"
version = "0.1.0"
description = "Documentation site for the Tinkerbell project."
authors = [ "Tinkerbell Contributors"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
markdown = ">=3.2"
mkdocs = ">=1.1"
mkdocs-material = ">=5.0"
mkdocs-versioning = ">=0.3"
pygments = ">=2.4"
pymdown-extensions = ">=7.0"
mdx-truly-sane-lists = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
