[tool.poetry]
name = "tinkerbell-docs"
version = "0.1.0"
description = "Documentation site for the Tinkerbell project."
authors = [ "Tinkerbell Contributors"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
markdown = ">=3.3"
mkdocs = ">=1.4"
mkdocs-material = ">=8.5"
mkdocs-versioning = ">=0.4"
pygments = ">=2.13"
pymdown-extensions = ">=9.6"
mdx-truly-sane-lists = ">=1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
